corrected some header alignment

--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -1,12 +1,13 @@
 .header {
   display: flex;
   background-color: var(--bg-gray-slightly-light);
-  padding: 0 1rem;
+  padding-left: 1rem;
   margin-bottom: 30px;
 }
 .icon-and-title-wrapper {
   display: flex;
   cursor: pointer;
+  margin-right: auto;
   color: black;
 }
 .icon-and-title-wrapper > h1 {
@@ -97,14 +98,12 @@
   cursor: pointer;
 }
 .hamburger-menu-wrapper {
-  position: absolute;
-  right: 0rem;
-  top: 0;
+  position: relative;
+  z-index: 2;
   height: 75px;
-  width: 5rem;
+  width: 75px;
   display: none;
   cursor: pointer;
-  z-index: 2;
 }
 .hamburger-menu-wrapper.hamburger-open {
   background-color: hsl(0, 0%, 75%);
@@ -113,24 +112,18 @@
 .hamburger-menu::before,
 .hamburger-menu::after {
   content: "";
+  display: block;
   background-color: white;
-  position: absolute;
   height: 4px;
   width: 30px;
   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
   border-radius: 5rem;
-  right: 25px;
-  top: 35px;
 }
 .hamburger-menu:before {
   transform: translateY(10px);
-  top: 0;
-  right: 0;
 }
 .hamburger-menu:after {
-  top: 0;
-  right: 0;
-  transform: translateY(-10px);
+  transform: translateY(-14px);
 }
 .hamburger-open .hamburger-menu {
   display: none;
@@ -139,18 +132,16 @@
 .X-close-button::after {
   content: "";
   background-color: white;
-  position: absolute;
-  height: 33px;
+  position: relative;
+  height: 30px;
   width: 5px;
   border-radius: 5rem;
-  right: 37px;
-  top: 20px;
 }
 .X-close-button::before {
-  transform: rotate(45deg);
+  transform: rotate(45deg) translateX(3px);
 }
 .X-close-button::after {
-  transform: rotate(135deg);
+  transform: rotate(135deg) translateX(3px);
 }
 
 .modal-cover {
@@ -164,6 +155,11 @@
 }
 
 @media only screen and (max-width: 525px) {
+  .app-icon {
+    width: 65px;
+    height: 65px;
+    align-self: center;
+  }
   .hamburger-menu-content {
     width: fit-content;
     display: none;
